# nb_pdf_template

./: .gitattributes  .gitignore  MANIFEST.in  README.md  jupyter.tplx  pyproject.toml  setup.py  style_jupyter.tplx
example/: create_tests.ps1  test.ipynb
nb_pdf_template/: __init__.py  install.py  jupyter_python.py
nb_pdf_template/templates/: classic.tplx  classicm.tplx  jupyter.tplx  style_jupyter.tplx  style_jupyter_minted.tplx
share/templates/latex_authentic/: conf.json  index.tex.j2  m.tex.j2
