[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nb_pdf_template"
version = "5.0.0"
description = "LaTeX templates for Jupyter notebook conversion to PDF"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }
authors = [
  { name = "Tyler Makaro", email = "" }
]
urls = { "Homepage" = "https://github.com/t-makaro/nb_pdf_template" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Development Status :: 5 - Production/Stable",
  "Topic :: Text Processing :: Markup :: LaTeX",
  "Programming Language :: Python :: 3",
]

[tool.hatch.build.targets.wheel]
include = [
  "nb_pdf_template/**",
  "README.md",
  "LICENSE",
]

[project.entry-points."pygments.styles"]
jupyter_python = "nb_pdf_template:Jupyter_PythonStyle"

[tool.hatch.build.targets.wheel.shared-data]
"share/templates" = "share/jupyter/nbconvert/templates"